# Dx3dKadai

./: .gitignore  CMakeLists.txt  DESIGN_DOC.md  NodeWars.cpp  README.md  golfgame.cpp  golfgame.h  vcpkg.json
asset/: corner.fbx  cylinder.fbx  edge.fbx  floor.fbx
include/core/gfx/: Mesh.hpp  Model.hpp  ModelLoader.hpp  RenderDeviceD3D11.hpp  Renderer.hpp  ShaderProgram.hpp  Texture.hpp  Vertex.hpp
include/core/physics/: Collider.hpp  Transform.hpp
include/core/render/: Drawable.hpp  Material.hpp
include/game/entity/: Cube.hpp  StaticEntity.hpp
include/game/world/: Field.hpp
shader/: instanced.hlsl  phong.hlsl  simple.hlsl  skybox.hlsl  ui.hlsl
src/core/gfx/: Camera.cpp  Camera.hpp  Mesh.cpp  Mesh.hpp  Minimap.cpp  Minimap.hpp  Model.hpp  ModelLoader.cpp  ModelLoader.hpp  QuadMesh.hpp  RenderDeviceD3D11.cpp  RenderDeviceD3D11.hpp  Renderer.cpp  Renderer.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Skybox.cpp  Skybox.hpp  Texture.cpp  Texture.hpp  Vertex.hpp
src/core/physics/: Collider.cpp  Collider.hpp  Colliders_Impl.cpp  ContactSolver.cpp  ContactSolver.hpp  PhysicsWorld.cpp  PhysicsWorld.hpp  RigidBody.hpp  Transform.hpp
src/core/render/: Drawable.hpp  Material.hpp
src/core/resource/: ResourceManager.cpp  ResourceManager.hpp
src/game/entity/: BallEntity.hpp  BillboardEntity.hpp  BlockEntity.cpp  BlockEntity.hpp  BulletEntity.cpp  BulletEntity.hpp  Cube.cpp  Cube.hpp  DynamicEntity.hpp  EntitySpawnExamples.hpp  ExampleUsage.hpp  ExplosionEffect.hpp  NodeEntity.cpp  NodeEntity.hpp  SignboardEntity.hpp  SpawnerEntity.hpp  StaticEntity.hpp  TrailEntity.cpp  TrailEntity.hpp
src/game/input/: InputManager.cpp  InputManager.hpp
src/game/runtime/: BattleScene.cpp  BattleScene.hpp  IEntity.hpp  MenuScene.cpp  MenuScene.hpp  PlayScene.cpp  PlayScene.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  TransitionScene.cpp  TransitionScene.hpp  WorldContext.hpp
src/game/scene/: BattleScene.cpp  BattleScene.hpp  HelpScene.cpp  HelpScene.hpp  LoseScene.cpp  LoseScene.hpp  MenuScene.cpp  MenuScene.hpp  TransitionScene.cpp  TransitionScene.hpp  WinScene.cpp  WinScene.hpp
src/game/ui/: UIButton.cpp  UIButton.hpp  UIElement.cpp  UIElement.hpp  UIImage.cpp  UIImage.hpp  UINumberDisplay.cpp  UINumberDisplay.hpp
src/game/world/: Field.hpp
